SimpleComplex/Validate 2.x, 2019-01-12
--------------------------------------
- Ensure that rule set values accord with whether rule methods accept
  (or even require) more arguments than subject self.
- RuleProviderInterface new method getParameterMethods().
- challengeRecording() allow for top level key-path name,
  and record arguments passed on validation failure.

SimpleComplex/Validate 2.x, 2019-01-08
--------------------------------------
- Release 2.2.

SimpleComplex/Validate 2.x, 2019-01-07
--------------------------------------
- ValidationRuleSet constructor's second argument is (preferably) now
  a rule provider or a rule provider info object; not rule-methods-available.
- ValidationRuleSet::ruleMethodsAvailable() is now deprecated.
- RuleProviderInterface new method getTypeMethods().

SimpleComplex/Validate 2.x, 2019-01-06
--------------------------------------
- No rules methods but 'empty' and 'null' must allow (pass) null.
- New non-rule method 'allowNull', for nested (object|array bucket) elements.
- New rule method 'bit'.
- Type-checking rule methods.

SimpleComplex/Validate 2.x, 2019-01-04
--------------------------------------
- phpunit's assert... methods are static, not instance methods.

SimpleComplex/Validate 2.x, 2018-08-04
--------------------------------------
- timeISO8601().
- Release 2.1.

SimpleComplex/Validate 2.x, 2018-07-07
--------------------------------------
- Release 2.0.1.

SimpleComplex/Validate 2.x, 2018-06-30
--------------------------------------
- Minor test fix; requires Utils >=1.7.2.

SimpleComplex/Validate 2.x, 2018-06-03
--------------------------------------
- Release 2.0.

SimpleComplex/Validate 2.x, 2018-05-27
--------------------------------------
- Date/Datetime rules have to be named using strict acronym camelCasing because
  native \DateTime does (setISODate());
  renamed dateISO8601Local and dateTimeISO8601.
- ISO-8601 datetime rules allowing sub seconds must default to max 6 digits,